# Simple_Rust_Compiler

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  temp.ll
.github/workflows/: rust_ci.yml
docs/: 总览.md
docs/ast/: AST模块.md
docs/ir/: 01_ir_generator.md  02_main_and_functions.md  03_expressions.md  04_statements.md  05_control_flow.md  06_complex_expressions.md  07_builtins.md  08_helpers.md  09_ir_emitter.md  10_type_mapper.md  11_value_manager.md  AST类型字段现状分析.md  CHANGELOG.md  IRGenerator实现进度报告v2_old.md  IRGenerator测试套件v2总结.md  IRGenerator第一阶段实现报告.md  IRGenerator设计方案.md  IR_核心问题解答.md  IR优化与测试调试完整记录.md  IR生成模块总览.md  IR生成模块重构说明.md  IR生成调试总结_Phase2H.md  IR语义验证测试报告.md  IR验证流程.md  Phase2H_优化报告.md  Phase2H_调试总结_20251115.md  Phase2H_进度报告_20251115.md  README.md  README_Phase2H.md  TypeMapper设计分析.md  TypeMapp问题解答.md  ValueManager设计分析.md  if_expression_implementation.md  impl_implementation_plan.md  ir_validation_report.md  nested_arrays_implementation.md  nested_function_support.md  nested_if_bug_fix_report.md  optimization_plan_20251116.md  optimization_report_20241116.md  (+6 more)
docs/lexer/: 词法分析器模块.md
scripts/: add_function_comments.py  clean_comments.py  enhance_comments.py  generate_test_reports.sh  run_tests.sh  semantic_benchmark  simplify_comments.sh  test_all_comprehensive.sh  test_arrays_and_structs.sh  test_comprehensive.sh  test_comprehensive_improved.sh  test_ir_comprehensive.sh  test_ir_comprehensive_cases.sh  test_ir_semantics.sh  test_ir_validation.sh  test_nested_arrays.sh  test_phase2f.sh  verify_fix.sh  verify_ir.sh
src/: main.cpp
(+154 files in other folders)
